--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "tsc -w"
+    "dev": "vitest",
+    "watch": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "jsdom": "^23.2.0",
+    "prettier": "^3.2.4",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-packagejson": "^2.4.9",
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.1"
+  },
+  "dependencies": {
+    "csstype": "^3.1.3"
   }
 }
