--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "isolatedModules": true,
     "baseUrl": ".",
     "strict": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "declaration": true,
     "target": "ES2020",
     "module": "ES2020",
@@ -14,12 +14,15 @@
     "useDefineForClassFields": true,
     "sourceMap": true,
     "incremental": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "types": ["vitest/globals"]
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "test/**/*.ts"
+    "src/__test__/**/*.ts"
   ],
-  "exclude": ["__test__"]
+  "types": [
+    "vitest/globals"
+  ]
 }
