--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vitest",
+    "build": "rm -rf dist && tsc -p tsconfig.build.json",
     "watch": "tsc -p tsconfig.watch.json -w",
     "format": "prettier -w src/*.ts"
   },
   "exports": {
-    ".": {
+    "./vite-vue": {
+      "types": "./dist/vue/plugin.d.ts",
+      "default": "./dist/vue/plugin.js"
+    },
+    "./vue": {
+      "types": "./dist/vue/vue.d.ts",
+      "default": "./dist/vue/vue.js"
+    },
+    "./core": {
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     }
@@ -17,13 +26,19 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "devDependencies": {
+  "optionalDependencies": {
+    "@types/node": "^20.11.7",
+    "esbuild": "^0.19.12",
     "jsdom": "^23.2.0",
     "prettier": "^3.2.4",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-packagejson": "^2.4.9",
     "typescript": "^5.3.3",
+    "vite": "^5.0.12",
     "vitest": "^1.2.1"
+  },
+  "peerDependencies": {
+    "vue": "^3.0.0"
   },
   "dependencies": {
     "csstype": "^3.1.3"
