--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,18 +9,19 @@
     "strictNullChecks": false,
     "declaration": true,
     "target": "ES2020",
-    "module": "ES2020",
-    "moduleResolution": "Bundler",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "useDefineForClassFields": true,
     "sourceMap": true,
     "incremental": true,
     "outDir": "dist",
-    "types": ["vitest/globals"]
+    "types": [
+      "vitest/globals"
+    ]
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/__test__/**/*.ts"
+    "src/**/*.tsx"
   ],
   "types": [
     "vitest/globals"
