--- a/package.json
+++ b/package.json
@@ -1,46 +1,20 @@
 {
-  "name": "usacss",
-  "version": "0.1.0",
   "description": "",
   "type": "module",
   "scripts": {
     "dev": "vitest",
-    "build": "rm -rf dist && tsc -p tsconfig.build.json",
-    "watch": "tsc -p tsconfig.watch.json -w",
-    "format": "prettier -w src/*.ts"
+    
+    "format": "prettier -w packages/**/*.ts"
   },
-  "exports": {
-    "./vite-vue": {
-      "types": "./dist/vite-vue/plugin.d.ts",
-      "default": "./dist/vite-vue/plugin.js"
-    },
-    "./vue": {
-      "types": "./dist/vue/vue.d.ts",
-      "default": "./dist/vue/vue.js"
-    },
-    "./core": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    }
-  },
-  "keywords": [],
-  "author": "",
   "license": "MIT",
-  "optionalDependencies": {
-    "@types/node": "^20.11.7",
-    "esbuild": "^0.19.12",
+  "devDependencies": {
+    "@types/node": "^20.11.13",
     "jsdom": "^23.2.0",
     "prettier": "^3.2.4",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "prettier-plugin-packagejson": "^2.4.9",
+    "prettier-plugin-packagejson": "^2.4.10",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
-    "vitest": "^1.2.1"
-  },
-  "peerDependencies": {
-    "vue": "^3.0.0"
-  },
-  "dependencies": {
-    "csstype": "^3.1.3"
+    "vitest": "^1.2.2"
   }
 }
