--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/vue.d.ts",
-      "default": "./dist/vue.js"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
   "scripts": {
