--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "vitest",
-    
+    "watch": "pnpm -r --parallel watch",
+    "build": "node scripts/build.mjs",
     "format": "prettier -w packages/**/*.ts"
   },
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.11.13",
+    "esbuild": "^0.19.12",
     "jsdom": "^23.2.0",
     "prettier": "^3.2.4",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-packagejson": "^2.4.10",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
-    "vitest": "^1.2.2"
+    "vitest": "^1.2.2",
+    "pretty-bytes": "^6.1.1"
   }
 }
