--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,8 +8,8 @@
     "strictNullChecks": false,
     "declaration": true,
     "target": "ESNext",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "useDefineForClassFields": true,
     "sourceMap": true,
     "incremental": true,
